--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -58,6 +58,8 @@
               href: class-type-matlab.md
             - name: SolidWorks のコンピューター支援設計 (CAD)
               href: class-type-solidworks.md
+            - name: GNS3 を使用したネットワーク
+              href: class-type-networking-gns3.md
             - name: Project Lead the Way
               href: class-type-pltw.md
         - name: Teams 内で Azure Lab Services を使用する
