--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -246,6 +246,8 @@
               href: search-howto-index-json-blobs.md
             - name: 暗号化された BLOB にインデックスを付ける
               href: search-howto-index-encrypted-blobs.md
+            - name: BLOB コンテンツのメタデータ プロパティ
+              href: search-blob-metadata-properties.md
         - name: Azure テーブル
           href: search-howto-indexing-azure-tables.md
         - name: Azure Cosmos DB
