--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -2,6 +2,8 @@
   href: index.yml
 - name: 概要
   href: overview.md
+- name: Azure Sentinel の新着情報
+  href: whats-new.md
 - name: クイックスタート
   expanded: true
   items:
