commit translated contents

--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -42,6 +42,8 @@
       href: authentication.md
     - name: セキュリティ ベースライン
       href: security-baseline.md
+    - name: Azure Policy によるセキュリティ制御
+      href: ./security-controls-policy.md
 - name: コンテナー サポート
   items:
     - name: コンテナー サポート
