--- a/articles/security/index.yml
+++ b/articles/security/index.yml
@@ -13,13 +13,13 @@ metadata:
   author: TerryLanfear
   ms.author: terrylan
   manager: rkarlin
-  ms.date: 08/29/2019
-  ms.openlocfilehash: a96ff0e329fb00888645949f2eab5652d15cb941
-  ms.sourcegitcommit: d60976768dec91724d94430fb6fc9498fdc1db37
+  ms.date: 02/03/2021
+  ms.openlocfilehash: e5944ae9a7c701f3bf84ff06fd543484bfe36b23
+  ms.sourcegitcommit: 5b926f173fe52f92fcd882d86707df8315b28667
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/02/2020
-  ms.locfileid: "96489685"
+  ms.lasthandoff: 02/04/2021
+  ms.locfileid: "99549815"
 highlightedContent:
   items:
   - title: Azure のセキュリティの概要
@@ -163,10 +163,10 @@ conceptualContent:
       text: Azure Security Center のセキュリティ アラート
     - url: ../storage/common/azure-defender-storage-configure.md
       itemType: concept
-      text: Advanced Threat Protection for Azure Storage
+      text: Azure Defender for Storage
     - url: ../azure-sql/database/threat-detection-overview.md
       itemType: concept
-      text: Azure SQL Database の Advanced Threat Protection
+      text: Azure Defender for SQL
     footerLink:
       url: ./fundamentals/threat-detection.md
       text: 詳細情報
