--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -176,7 +176,7 @@
           href: hyper-v-vmm-secondary-support-matrix.md
         - name: Hyper-V VM からセカンダリ サイトへのアーキテクチャ
           href: hyper-v-vmm-architecture.md
-    - name: Security
+    - name: セキュリティ
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -478,6 +478,8 @@
       href: hyper-v-vmm-powershell-resource-manager.md
     - name: Automation Runbook を復旧計画に追加する
       href: site-recovery-runbook-automation.md
+    - name: ARM テンプレート
+      href: asr-arm-templates.md
 - name: 監視
   items:
     - name: 監視についてよく寄せられる質問
