--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -38,6 +38,14 @@
           href: quickstarts/voice-video-calling/calling-client-samples.md
         - name: 通話アプリを Teams の会議に参加させる
           href: quickstarts/voice-video-calling/get-started-teams-interop.md
+    - name: UI フレームワーク
+      items:
+        - name: 複合コンポーネントの概要
+          href: quickstarts/ui-framework/get-started-with-composites.md
+        - name: 基本コンポーネントの概要
+          href: quickstarts/ui-framework/get-started-with-components.md
+        - name: 独自の UI フレームワーク コンポーネントを作成する
+          href: quickstarts/ui-framework/create-your-own-components.md
 - name: チュートリアル
   expanded: false
   items:
@@ -70,6 +78,12 @@
           href: concepts/voice-video-calling/about-call-types.md
         - name: Teams の相互運用性
           href: concepts/voice-video-calling/teams-interop.md
+    - name: UI フレームワーク
+      items:
+        - name: UI フレームワークの概要
+          href: concepts/ui-framework/ui-sdk-overview.md
+        - name: UI フレームワークの機能
+          href: concepts/ui-framework/ui-sdk-features.md
     - name: クライアントとサーバーのアーキテクチャ
       href: concepts/client-and-server-architecture.md
     - name: 通話のフロー
