--- a/articles/virtual-machines/TOC.yml
+++ b/articles/virtual-machines/TOC.yml
@@ -103,6 +103,8 @@
       href: ./linux/tutorial-elasticsearch.md
     - name: FreeBSD のパケット フィルター
       href: ./linux/freebsd-pf-nat.md
+    - name: メインフレームのホスト変更
+      href: ./workloads/mainframe-rehosting/overview.md
     - name: データベース
       items:
         - name: MySQL on SUSE
@@ -1448,6 +1450,8 @@
               href: ./linux/move-vm.md
             - name: PowerShell
               href: ./windows/move-vm.md
+            - name: Marketplace VM のサブスクリプションを変更する
+              href: azure-cli-change-subscription-marketplace.md
         - name: VM を別のリージョンに移行する
           href: ../site-recovery/azure-to-azure-tutorial-migrate.md
         - name: 可用性ゾーンに移動する
@@ -1480,7 +1484,7 @@
     - name: Azure DevOps
       href: ./linux/tutorial-azure-devops-blue-green-strategy.md
 - name: トラブルシューティング
-  href: ./troubleshooting/index.yml
+  href: 'https://docs.microsoft.com/troubleshoot/azure/virtual-machines/welcome-virtual-machines'
 - name: リソース
   items:
     - name: クラウド導入フレームワーク
