Update TOC.yml (Back-Translation "BLOB ストレージ"→"Blob Storage")
https://docs.microsoft.com/ja-jp/azure/storage/blobs/storage-blobs-introduction

--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -7,7 +7,7 @@
     - name: コア ストレージ サービスの比較
       href: ../common/storage-introduction.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
   expanded: true
-- name: BLOB ストレージ
+- name: Blob Storage
   items:
     - name: 概要
       items:
