--- a/articles/confidential-computing/TOC.yml
+++ b/articles/confidential-computing/TOC.yml
@@ -52,6 +52,8 @@
       href: application-development.md
 - name: 操作方法
   items:
+    - name: Fortanix Confidential Computing Manager
+      href: how-to-fortanix-confidential-computing-manager.md
     - name: Fortanix Enclave Manager
       href: how-to-fortanix-enclave-manager.md
 - name: リファレンス
