--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -117,23 +117,33 @@
         - name: Azure AD テナントを構成する
           href: openvpn-azure-ad-tenant.md
         - name: クライアント プロファイル
-          href: about-vpn-profile-download.md
-        - name: グローバルおよびハブベースのプロファイル
-          href: global-hub-profile.md
-        - name: Windows 10 向けに Azure VPN クライアントを構成する
-          href: openvpn-azure-ad-client.md
-        - name: OpenVPN クライアントを構成する
-          href: howto-openvpn-clients.md?
-        - name: Always-On VPN ユーザー トンネルを構成する
-          href: howto-always-on-user-tunnel.md
-        - name: Always-On VPN デバイス トンネルを構成する
-          href: howto-always-on-device-tunnel.md
-        - name: Multi-Factor Authentication (MFA) を有効にする
-          href: openvpn-azure-ad-mfa.md
-        - name: Azure AD 認証を構成する
-          href: virtual-wan-point-to-site-azure-ad.md
-        - name: マルチアプリケーション Azure AD 認証を構成する
-          href: openvpn-azure-ad-tenant-multi-app.md
+          items:
+            - name: グローバルおよびハブベースのプロファイルのダウンロード
+              href: global-hub-profile.md
+            - name: プロファイル情報の抽出と表示
+              href: about-vpn-profile-download.md
+            - name: Intune を使用したプロファイルのデプロイ
+              href: vpn-profile-intune.md
+        - name: VPN クライアント
+          items:
+            - name: Windows 10
+              href: openvpn-azure-ad-client.md
+            - name: OpenVPN
+              href: howto-openvpn-clients.md?
+        - name: Always-On トンネルを構成する
+          items:
+            - name: ユーザー トンネル
+              href: howto-always-on-user-tunnel.md
+            - name: デバイス トンネル
+              href: howto-always-on-device-tunnel.md
+        - name: 認証
+          items:
+            - name: 多要素認証 (MFA)
+              href: openvpn-azure-ad-mfa.md
+            - name: Azure AD 認証
+              href: virtual-wan-point-to-site-azure-ad.md
+            - name: マルチアプリケーション Azure AD 認証
+              href: openvpn-azure-ad-tenant-multi-app.md
     - name: ルーティング
       items:
         - name: 仮想ハブのルーティングを構成する方法
@@ -146,7 +156,7 @@
               href: virtual-wan-route-table-nva-portal.md
             - name: Azure PowerShell
               href: virtual-wan-route-table-nva.md
-    - name: Security
+    - name: セキュリティ
       items:
         - name: Azure Firewall をハブにデプロイする
           href: howto-firewall.md
